# mipsy_web

./: CNAME  CONTRIBUTING.md  Cargo.toml  README.md  app-b9a7cde4fe116fac.js  app-b9a7cde4fe116fac_bg.wasm  index.html  rust-toolchain.toml  worker.js  worker_bg.wasm
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml  format.yml  test.yml
assets/: index.css
src/: agent.rs  config.rs  lib.rs  main.s  state.rs
src/agent/: communication.rs  mipsy_glue.rs  mod.rs  state.rs  worker.rs
src/bindings/: split.rs
src/components/: app.rs  debug_pane.rs  debugger.rs  decompiled_container.rs  file_explorer.rs  icons.rs  layout.rs  menubar.rs  mod.rs  new_file_button.rs  open_files_button.rs  run_button.rs  runtime.rs  secondary_panel.rs  sidebar.rs  tab.rs  tab_container.rs  three_tab_switcher.rs
src/components/debugger/: container.rs  start_button.rs
src/components/file_explorer/: container.rs  mod.rs  new_file_button.rs
src/components/layout/: containers.rs  three_col_resizable.rs  three_tab_switcher.rs
src/components/runtime/: container.rs  mod.rs  output_tab_switcher.rs  register_tab_switcher.rs
src/editor/: component.rs  files.rs  mod.rs
src/indexdb_fs/: mod.rs
src/state/: app.rs  breakpoints.rs  error.rs  mipsy_internal.rs  running.rs
tests/: sidebar.rs
tests/common/: mod.rs
tests/runner/: Cargo.toml
tests/runner/src/: main.rs
