[package]
name = "mipsy_web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
stylist = { version = "0.11", features = ["yew_integration", "parser"] }
indexed_db_futures = "0.2.3"
anyhow = "1.0.65"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["File", "DragEvent", "DataTransfer"] }
wasm-bindgen-test = "0.3.33"
monaco = { git = "https://github.com/siku2/rust-monaco", features = ["yew-components"] }
bounce = "0.5.0"
log = "0.4.17"
gloo-worker = { version = "0.2.1", features = ["futures"] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
tracing-web = "0.1.2"
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", features = ["time"] }
time = { version = "*", features = ["wasm-bindgen"] }
wasm-logger = "0.2.0"
gloo = { version = "0.8.0", features = ["futures"] }
mipsy_utils = { git = "https://github.com/insou22/mipsy" }
mipsy_lib = { git = "https://github.com/insou22/mipsy" }
mipsy_parser = { git = "https://github.com/insou22/mipsy" }
mipsy_instructions = { git = "https://github.com/insou22/mipsy" , features = ["rt_yaml"] } 


